# pyuck

./: README.md  pyproject.toml  yuck.py
yuck/: __init__.py  yuck_function.py
